--- a/style.css
+++ b/style.css
@@ -1,31 +1,30 @@
-body {
+* {
+	box-sizing: border-box;
 	margin: 0px;
 	padding: 0px;
+}
+body {
+	width: 100%;
 }
 .header {
 	display: flex;
 	background-color: yellow;
 	width: 100%;
-	height: 50px;
+	height: 100px;
 }
-header nav div .logo {
-	float: left;
-	text-align: left;
-}
-header nav div .menu {
-	float: right;
-	text-align: right;
+.navibar {
+	display: flex;
 }
 .container {
 	display: flex;
 	background-color: #dddddd;
 }
 .container div {
+	flex: 1;
 	width: 300px;
 	height: 400px;
 	background-color: #c2c2c2;
-	margin: 7%;
-	float: left;
+	margin: 30px 20px;
 	text-align: center;
 	border-radius: 5px;
 }
